--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vkontakte/vkjs": "^0.22.1",
     "@vkontakte/vkui": "^4.5.0",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "4.5.3",
     "chalk": "^4.1.0",
     "eruda": "^2.4.1",
     "eruda-code": "^2.0.0",
