--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "eruda-dom": "^2.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-virtuoso": "^1.10.8"
   },
   "browserslist": {
     "production": [
