--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "^4.0.3"
   },
   "dependencies": {
+    "@happysanta/router": "0.2.2",
     "@vkontakte/icons": "^1.92.0",
     "@vkontakte/vk-bridge": "^2.4.8",
     "@vkontakte/vk-miniapps-deploy": "0.0.25",
