--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@vkontakte/vk-bridge": "^2.4.8",
     "@vkontakte/vk-miniapps-deploy": "0.0.25",
     "@vkontakte/vkjs": "^0.22.1",
-    "@vkontakte/vkui": "^4.5.0",
+    "@vkontakte/vkui": "4.22.1",
     "babel-eslint": "^10.1.0",
     "bootstrap": "4.5.3",
     "chalk": "^4.1.0",
