--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vk-library-app",
+  "name": "ws-spblib-platoniki",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
