--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "react-scripts": "^4.0.3"
   },
   "dependencies": {
+    "@happysanta/router": "0.2.2",
+    "@vkontakte/vkui": "4.22.1",
+    "bootstrap": "4.5.3",
+    "react-virtuoso": "1.10.8",
     "@vkontakte/icons": "^1.92.0",
     "@vkontakte/vk-bridge": "^2.4.8",
     "@vkontakte/vk-miniapps-deploy": "0.0.25",
     "@vkontakte/vkjs": "^0.22.1",
-    "@vkontakte/vkui": "^4.5.0",
     "babel-eslint": "^10.1.0",
     "chalk": "^4.1.0",
     "eruda": "^2.4.1",
